<resources>
    <string name="view_rules">규칙 리스트 보기</string>
    <string name="app_name">Ch13_Activity</string>
    <string name="add_rule">Add Rule</string>
    <string-array name="repeat_options">
        <item>반복 안함</item>
        <item>매일</item>
        <item>매주</item>
        <item>매월</item>
        <item>매년</item>
    </string-array>
    <string name="tap_plus_to">
        새로운 규칙을 생성하세요.
    </string>
    <!-- strings.xml -->
    <string name="add_your_ta">
        Add your task
    </string>
    <!-- strings.xml -->
    <string name="today">
        Today
    </string>
    <string name="today_mon_2">
        Today Mon 20 Jul 2022
    </string>
    <!-- strings.xml -->
    <string name="best_platfo">
        Best platform for creating to-do lists
    </string>
    <!-- strings.xml -->
    <string name="eg_meeting_">
        eg : Meeting with client
    </string>
    <!-- strings.xml -->
    <string name="description">
        Description
    </string>
    <!-- strings.xml -->
    <string name="description_2">
        Description
    </string>
    <!-- strings.xml -->
    <string name="add_time">
        Add Time
    </string>
</resources>